--- a/src/test_foot_viz copy.ipynb
+++ b/src/test_foot_viz copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T19:29:27.847968Z",
@@ -51,16 +51,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   №        Situation   Sh   G  ShA  GA           xG         xGA    xGD  \\\n",
+       "0  1        Open play  340  39  238  19  49.53+10.53  18.09-0.91  31.44   \n",
+       "1  2      From corner   71   2   51   1    6.08+4.08   3.51+2.51   2.56   \n",
+       "2  3        Set piece   24   4   17   1    2.93-1.07   1.41+0.41   1.52   \n",
+       "3  4  Direct Freekick   22   2   12   0    1.13-0.87   0.82+0.82   0.31   \n",
+       "4  5          Penalty    9   9    6   4    6.84-2.16   4.56+0.56   2.28   \n",
+       "\n",
+       "   xG/Sh  xGA/Sh  \n",
+       "0   0.15    0.08  \n",
+       "1   0.09    0.07  \n",
+       "2   0.12    0.08  \n",
+       "3   0.05    0.07  \n",
+       "4   0.76    0.76  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>№</th>\n      <th>Situation</th>\n      <th>Sh</th>\n      <th>G</th>\n      <th>ShA</th>\n      <th>GA</th>\n      <th>xG</th>\n      <th>xGA</th>\n      <th>xGD</th>\n      <th>xG/Sh</th>\n      <th>xGA/Sh</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Open play</td>\n      <td>340</td>\n      <td>39</td>\n      <td>238</td>\n      <td>19</td>\n      <td>49.53+10.53</td>\n      <td>18.09-0.91</td>\n      <td>31.44</td>\n      <td>0.15</td>\n      <td>0.08</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>From corner</td>\n      <td>71</td>\n      <td>2</td>\n      <td>51</td>\n      <td>1</td>\n      <td>6.08+4.08</td>\n      <td>3.51+2.51</td>\n      <td>2.56</td>\n      <td>0.09</td>\n      <td>0.07</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>Set piece</td>\n      <td>24</td>\n      <td>4</td>\n      <td>17</td>\n      <td>1</td>\n      <td>2.93-1.07</td>\n      <td>1.41+0.41</td>\n      <td>1.52</td>\n      <td>0.12</td>\n      <td>0.08</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>Direct Freekick</td>\n      <td>22</td>\n      <td>2</td>\n      <td>12</td>\n      <td>0</td>\n      <td>1.13-0.87</td>\n      <td>0.82+0.82</td>\n      <td>0.31</td>\n      <td>0.05</td>\n      <td>0.07</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>Penalty</td>\n      <td>9</td>\n      <td>9</td>\n      <td>6</td>\n      <td>4</td>\n      <td>6.84-2.16</td>\n      <td>4.56+0.56</td>\n      <td>2.28</td>\n      <td>0.76</td>\n      <td>0.76</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
    "source": [
     "pd.read_html(str(table_html))[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,40 +97,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "import config\n",
+    "from utils import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_xG_html_table(team_name: str, year: int, force_update: bool = False, stats: str = \"players\") -> str:\n",
+    "    path_name = os.path.join(\n",
+    "        config.CACHE_PATH, f\"{team_name}_{year}_{stats}.txt\")\n",
+    "\n",
+    "    # try cache\n",
+    "    if os.path.exists(path_name) and not force_update:\n",
+    "        with open(path_name) as cache_text:\n",
+    "            table_html = cache_text.read().replace('\\n', '')\n",
+    "        return table_html\n",
+    "\n",
+    "    driver = get_driver()\n",
+    "\n",
+    "    driver.get(f\"https://understat.com/team/{team_name}/{year}\")\n",
+    "    team_soup = BeautifulSoup(driver.page_source)\n",
+    "    table_html = str(team_soup.find(\n",
+    "        \"div\", {\"id\": f\"team-{stats}\"}).find(\"table\"))\n",
+    "\n",
+    "    driver.quit()\n",
+    "\n",
+    "    with open(path_name, \"w\") as cache_text:\n",
+    "        cache_text.write(table_html)\n",
+    "\n",
+    "    return table_html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_db(list_teams, list_years):\n",
+    "    for team, year in itertools.product(list_teams, list_years):\n",
+    "        get_xG_html_table(team, year, force_update=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "   №        Situation   Sh   G  ShA  GA           xG         xGA    xGD  \\\n",
-       "0  1        Open play  319  37  223  19  47.19+10.19  17.36-1.64  29.83   \n",
-       "1  2      From corner   68   2   45   1    6.01+4.01   3.09+2.09   2.92   \n",
-       "2  3        Set piece   23   4   16   1    2.84-1.16   1.39+0.39   1.45   \n",
-       "3  4  Direct Freekick   21   2   11   0    1.10-0.90   0.79+0.79   0.31   \n",
-       "4  5          Penalty    9   9    5   3    6.84-2.16   3.80+0.80   3.04   \n",
-       "\n",
-       "   xG/Sh  xGA/Sh  \n",
-       "0   0.15    0.08  \n",
-       "1   0.09    0.07  \n",
-       "2   0.12    0.09  \n",
-       "3   0.05    0.07  \n",
-       "4   0.76    0.76  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>№</th>\n      <th>Situation</th>\n      <th>Sh</th>\n      <th>G</th>\n      <th>ShA</th>\n      <th>GA</th>\n      <th>xG</th>\n      <th>xGA</th>\n      <th>xGD</th>\n      <th>xG/Sh</th>\n      <th>xGA/Sh</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Open play</td>\n      <td>319</td>\n      <td>37</td>\n      <td>223</td>\n      <td>19</td>\n      <td>47.19+10.19</td>\n      <td>17.36-1.64</td>\n      <td>29.83</td>\n      <td>0.15</td>\n      <td>0.08</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>From corner</td>\n      <td>68</td>\n      <td>2</td>\n      <td>45</td>\n      <td>1</td>\n      <td>6.01+4.01</td>\n      <td>3.09+2.09</td>\n      <td>2.92</td>\n      <td>0.09</td>\n      <td>0.07</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>Set piece</td>\n      <td>23</td>\n      <td>4</td>\n      <td>16</td>\n      <td>1</td>\n      <td>2.84-1.16</td>\n      <td>1.39+0.39</td>\n      <td>1.45</td>\n      <td>0.12</td>\n      <td>0.09</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>Direct Freekick</td>\n      <td>21</td>\n      <td>2</td>\n      <td>11</td>\n      <td>0</td>\n      <td>1.10-0.90</td>\n      <td>0.79+0.79</td>\n      <td>0.31</td>\n      <td>0.05</td>\n      <td>0.07</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>Penalty</td>\n      <td>9</td>\n      <td>9</td>\n      <td>5</td>\n      <td>3</td>\n      <td>6.84-2.16</td>\n      <td>3.80+0.80</td>\n      <td>3.04</td>\n      <td>0.76</td>\n      <td>0.76</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+       "'4.47.0'"
+      ]
      },
      "metadata": {},
-     "execution_count": 93
+     "execution_count": 27
     }
    ],
    "source": [
-    "df_stats"
+    "tqdm.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,9 +189,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'df_stats' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-d4211d65b800>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_stats\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_stats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf_stats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Situation\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"Penalty\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitertools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mproduct\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_stats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Situation\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"xG/Sh\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"xGA/Sh\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mcounts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_stats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'xG/Sh'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_stats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'xGA/Sh'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0msource\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mColumnDataSource\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcounts\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcounts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_stats' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df_stats = df_stats[df_stats[\"Situation\"] != \"Penalty\"]\n",
     "x = list(itertools.product(df_stats[\"Situation\"], [\"xG/Sh\", \"xGA/Sh\"]))\n",
@@ -146,28 +231,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "([('Open play', 'xG/Sh'),\n",
-       "  ('Open play', 'xGA/Sh'),\n",
-       "  ('From corner', 'xG/Sh'),\n",
-       "  ('From corner', 'xGA/Sh'),\n",
-       "  ('Set piece', 'xG/Sh'),\n",
-       "  ('Set piece', 'xGA/Sh'),\n",
-       "  ('Direct Freekick', 'xG/Sh'),\n",
-       "  ('Direct Freekick', 'xGA/Sh'),\n",
-       "  ('Penalty', 'xG/Sh'),\n",
-       "  ('Penalty', 'xGA/Sh')],\n",
-       " (0.15, 0.08, 0.09, 0.07, 0.12, 0.09, 0.05, 0.07, 0.76, 0.76))"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 116
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-982117ac11cb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcounts\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
     }
    ],
    "source": [
@@ -176,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +281,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 114
+     "execution_count": 9
     }
    ],
    "source": [
@@ -225,24 +301,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "KeyError",
-     "evalue": "'Situation'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-96-9a2d33b56b1a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgroup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Situation'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msource\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mColumnDataSource\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Situation\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_range\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtitle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"MPG by # cylinders\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtools\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mgroupby\u001b[0;34m(self, by, axis, level, as_index, sort, group_keys, squeeze, observed, dropna)\u001b[0m\n\u001b[1;32m   6712\u001b[0m         \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_axis_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6713\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6714\u001b[0;31m         return DataFrameGroupBy(\n\u001b[0m\u001b[1;32m   6715\u001b[0m             \u001b[0mobj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6716\u001b[0m             \u001b[0mkeys\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mby\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/pandas/core/groupby/groupby.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, obj, keys, axis, level, grouper, exclusions, selection, as_index, sort, group_keys, squeeze, observed, mutated, dropna)\u001b[0m\n\u001b[1;32m    558\u001b[0m             \u001b[0;32mfrom\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrouper\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_grouper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    559\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 560\u001b[0;31m             grouper, exclusions, obj = get_grouper(\n\u001b[0m\u001b[1;32m    561\u001b[0m                 \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    562\u001b[0m                 \u001b[0mkeys\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/pandas/core/groupby/grouper.py\u001b[0m in \u001b[0;36mget_grouper\u001b[0;34m(obj, key, axis, level, sort, observed, mutated, validate, dropna)\u001b[0m\n\u001b[1;32m    809\u001b[0m                 \u001b[0min_axis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgpr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgpr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    810\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 811\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgpr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    812\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgpr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGrouper\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mgpr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkey\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    813\u001b[0m             \u001b[0;31m# Add key to exclusions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'Situation'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fruits = ['Apples', 'Pears', 'Nectarines', 'Plums', 'Grapes', 'Strawberries']\n",
     "years = ['2015', '2016', '2017']\n",
