--- a/notebooks/test_foot_viz.ipynb
+++ b/notebooks/test_foot_viz.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-20T11:14:01.364362Z",
-     "start_time": "2021-03-20T11:13:59.462972Z"
+     "end_time": "2021-04-01T11:36:58.678892Z",
+     "start_time": "2021-04-01T11:36:56.556133Z"
     }
    },
    "outputs": [],
@@ -14,6 +14,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from bs4 import BeautifulSoup\n",
+    "import re\n",
     "\n",
     "import bokeh\n",
     "from bokeh.palettes import RdYlGn\n",
@@ -21,6 +22,12 @@
     "from bokeh.plotting import figure, output_file, show\n",
     "from bokeh.transform import linear_cmap\n",
     "from bokeh.models.tools import HoverTool\n",
+    "from bokeh.layouts import row\n",
+    "from bokeh.models import (CategoricalTicker, ColorBar, ColumnDataSource, CategoricalColorMapper, \n",
+    "                          LinearColorMapper, NumeralTickFormatter, FactorRange)\n",
+    "from bokeh.plotting import figure, output_file, show\n",
+    "from bokeh.plotting.figure import Figure\n",
+    "\n",
     "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.options import Options\n",
@@ -30,49 +37,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 129,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-20T11:16:48.941382Z",
-     "start_time": "2021-03-20T11:16:44.662268Z"
+     "end_time": "2021-04-01T12:38:02.586009Z",
+     "start_time": "2021-04-01T12:37:58.946864Z"
     }
    },
    "outputs": [],
    "source": [
-    "league_name = \"Ligue_1\"\n",
+    "team_name = \"Lyon\"\n",
     "\n",
     "chrome_options = Options()\n",
     "chrome_options.add_argument(\"--headless\")\n",
     "\n",
     "driver = webdriver.Chrome(options=chrome_options, executable_path=CHROMEDRIVER_PATH)\n",
     "\n",
-    "driver.get(f\"https://understat.com/league/{league_name}\")\n",
+    "driver.get(f\"https://understat.com/team/{team_name}/2020\")\n",
     "\n",
     "team_soup = BeautifulSoup(driver.page_source)\n",
-    "table_html = team_soup.find(\"div\", {\"id\": \"league-chemp\"}).find(\"table\")\n",
+    "table_html = team_soup.find(\"div\", {\"class\": \"calendar-container\"})\n",
     "\n",
     "driver.quit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 169,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-20T11:56:19.005359Z",
-     "start_time": "2021-03-20T11:56:18.982805Z"
+     "end_time": "2021-04-01T21:02:34.487529Z",
+     "start_time": "2021-04-01T21:02:34.479429Z"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def make_match_dict(match: str) -> dict:\n",
+    "    \"\"\"Converts raw html of match boxes to dict\"\"\"\n",
+    "    date = match.find(\"div\", {\"class\": \"calendar-date\"}).text\n",
+    "    opponent = match.find(\"div\", {\"class\": \"team-title\"}).text\n",
+    "    goals = match.find(\"div\", {\"class\": \"teams-xG\"}).text\n",
+    "    home_goals = goals[:4]\n",
+    "    away_goals = goals[4:]\n",
+    "\n",
+    "    tag_results = str(match.find(\"div\", {\"class\": \"calendar-date\"}))\n",
+    "    match_result = re.findall(r\"data-result=(.{3})\", tag_results)[0][1]\n",
+    "    team_side = re.findall(r\"data-side=(.{3})\", tag_results)[0][1]\n",
+    "\n",
+    "    match_dict = {\"date\": date,\n",
+    "                  \"opponent\": opponent,\n",
+    "                  \"team_side\": team_side,\n",
+    "                  \"match_result\": match_result,\n",
+    "                  \"home_xGoals\": float(home_goals),\n",
+    "                  \"away_xGoals\": float(away_goals)}\n",
+    "\n",
+    "    return match_dict"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 170,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-20T11:56:19.274004Z",
-     "start_time": "2021-03-20T11:56:19.260907Z"
+     "end_time": "2021-04-01T21:02:34.627722Z",
+     "start_time": "2021-04-01T21:02:34.622096Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def process_df_teams(df_team: pd.DataFrame, days_rolling: int) -> pd.DataFrame:\n",
+    "    \"\"\"Create team xG columns from home/away xG\n",
+    "    and adds rolling xG\"\"\"\n",
+    "    goals_if_home = (df_team[\"team_side\"] == \"h\") * df_team[\"home_xGoals\"]\n",
+    "    goals_if_away = (df_team[\"team_side\"] == \"a\") * df_team[\"away_xGoals\"]\n",
+    "\n",
+    "    df_team[\"team_xGoals\"] = goals_if_home + goals_if_away\n",
+    "    df_team[\"opponents_xGoals\"] = df_team[\"home_xGoals\"] + df_team[\"away_xGoals\"] - df_team[\"team_xGoals\"]\n",
+    "\n",
+    "    df_team = df_team.reset_index()\n",
+    "    df_team[\"journée\"] = df_team[\"index\"] + 1\n",
+    "    df_team[\"rolling_team_xG\"] = (df_team[\"team_xGoals\"]\n",
+    "                                  .rolling(days_rolling, min_periods=2)\n",
+    "                                  .mean())\n",
+    "\n",
+    "    df_team[\"rolling_opponent_xG\"] = (df_team[\"opponents_xGoals\"]\n",
+    "                                      .rolling(days_rolling, min_periods=2)\n",
+    "                                      .mean())\n",
+    "\n",
+    "    side_mapper = {\"h\": \"Domicile\", \"a\": \"Extérieur\"}\n",
+    "    result_mapper = {\"w\": \"Victoire\", \"d\": \"Match Nul\", \"l\": \"Défaite\"}\n",
+    "\n",
+    "    df_team[\"team_side\"] = df_team[\"team_side\"].map(side_mapper)\n",
+    "    df_team[\"match_result\"] = df_team[\"match_result\"].map(result_mapper)\n",
+    "\n",
+    "    return df_team"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-01T21:02:34.778401Z",
+     "start_time": "2021-04-01T21:02:34.772396Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def make_team_df_from_html(table_html: str) -> pd.DataFrame:\n",
+    "    list_matches = table_html.find_all(\n",
+    "        \"div\", {\"class\": \"calendar-date-container mini\"})\n",
+    "    match_info = dict()\n",
+    "\n",
+    "    for j, match in enumerate(list_matches):\n",
+    "        try:\n",
+    "            match_info[j] = make_match_dict(match)\n",
+    "\n",
+    "        except AttributeError:  # match not played yet\n",
+    "            pass\n",
+    "\n",
+    "    df_team = pd.DataFrame.from_dict(match_info).T\n",
+    "    df_team = process_df_teams(df_team, days_rolling=6)\n",
+    "    \n",
+    "    return df_team"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-01T21:02:34.926858Z",
+     "start_time": "2021-04-01T21:02:34.903685Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_team = make_team_df_from_html(table_html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-01T21:03:05.339718Z",
+     "start_time": "2021-04-01T21:03:05.320143Z"
     }
    },
    "outputs": [
@@ -97,73 +207,287 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>№</th>\n",
-       "      <th>Team</th>\n",
-       "      <th>M</th>\n",
-       "      <th>W</th>\n",
-       "      <th>D</th>\n",
-       "      <th>L</th>\n",
-       "      <th>G</th>\n",
-       "      <th>GA</th>\n",
-       "      <th>PTS</th>\n",
-       "      <th>xG</th>\n",
-       "      <th>xGA</th>\n",
-       "      <th>xPTS</th>\n",
+       "      <th>index</th>\n",
+       "      <th>date</th>\n",
+       "      <th>opponent</th>\n",
+       "      <th>team_side</th>\n",
+       "      <th>match_result</th>\n",
+       "      <th>home_xGoals</th>\n",
+       "      <th>away_xGoals</th>\n",
+       "      <th>team_xGoals</th>\n",
+       "      <th>opponents_xGoals</th>\n",
+       "      <th>journée</th>\n",
+       "      <th>rolling_team_xG</th>\n",
+       "      <th>rolling_opponent_xG</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Aug 28, 2020</td>\n",
+       "      <td>Dijon</td>\n",
+       "      <td>Domicile</td>\n",
+       "      <td>Victoire</td>\n",
+       "      <td>3.97</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>3.97</td>\n",
+       "      <td>0.22</td>\n",
        "      <td>1</td>\n",
-       "      <td>Lille</td>\n",
-       "      <td>29</td>\n",
-       "      <td>18</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
-       "      <td>49</td>\n",
-       "      <td>17</td>\n",
-       "      <td>63</td>\n",
-       "      <td>38.68-10.32</td>\n",
-       "      <td>17.55+0.55</td>\n",
-       "      <td>54.18-8.82</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Sep 11, 2020</td>\n",
+       "      <td>Bordeaux</td>\n",
+       "      <td>Extérieur</td>\n",
+       "      <td>Match Nul</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0.23</td>\n",
        "      <td>2</td>\n",
-       "      <td>Paris Saint Germain</td>\n",
-       "      <td>29</td>\n",
-       "      <td>19</td>\n",
+       "      <td>2.885000</td>\n",
+       "      <td>0.225000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Sep 15, 2020</td>\n",
+       "      <td>Montpellier</td>\n",
+       "      <td>Extérieur</td>\n",
+       "      <td>Défaite</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>2.17</td>\n",
+       "      <td>2.17</td>\n",
+       "      <td>1.75</td>\n",
        "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>63</td>\n",
-       "      <td>19</td>\n",
-       "      <td>60</td>\n",
-       "      <td>64.56+1.56</td>\n",
-       "      <td>29.74+10.74</td>\n",
-       "      <td>58.69-1.31</td>\n",
+       "      <td>2.646667</td>\n",
+       "      <td>0.733333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Sep 18, 2020</td>\n",
+       "      <td>Nimes</td>\n",
+       "      <td>Domicile</td>\n",
+       "      <td>Match Nul</td>\n",
+       "      <td>1.63</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>1.63</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.392500</td>\n",
+       "      <td>0.727500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Sep 27, 2020</td>\n",
+       "      <td>Lorient</td>\n",
+       "      <td>Extérieur</td>\n",
+       "      <td>Match Nul</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.078000</td>\n",
+       "      <td>0.642000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   №                 Team   M   W  D  L   G  GA  PTS           xG  \\\n",
-       "0  1                Lille  29  18  9  2  49  17   63  38.68-10.32   \n",
-       "1  2  Paris Saint Germain  29  19  3  7  63  19   60   64.56+1.56   \n",
+       "   index          date     opponent  team_side match_result home_xGoals  \\\n",
+       "0      0  Aug 28, 2020        Dijon   Domicile     Victoire        3.97   \n",
+       "1      1  Sep 11, 2020     Bordeaux  Extérieur    Match Nul        0.23   \n",
+       "2      2  Sep 15, 2020  Montpellier  Extérieur      Défaite        1.75   \n",
+       "3      3  Sep 18, 2020        Nimes   Domicile    Match Nul        1.63   \n",
+       "4      4  Sep 27, 2020      Lorient  Extérieur    Match Nul         0.3   \n",
        "\n",
-       "           xGA        xPTS  \n",
-       "0   17.55+0.55  54.18-8.82  \n",
-       "1  29.74+10.74  58.69-1.31  "
+       "  away_xGoals team_xGoals opponents_xGoals  journée  rolling_team_xG  \\\n",
+       "0        0.22        3.97             0.22        1              NaN   \n",
+       "1         1.8         1.8             0.23        2         2.885000   \n",
+       "2        2.17        2.17             1.75        3         2.646667   \n",
+       "3        0.71        1.63             0.71        4         2.392500   \n",
+       "4        0.82        0.82              0.3        5         2.078000   \n",
+       "\n",
+       "   rolling_opponent_xG  \n",
+       "0                  NaN  \n",
+       "1             0.225000  \n",
+       "2             0.733333  \n",
+       "3             0.727500  \n",
+       "4             0.642000  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_league.head(2)"
+    "df_team.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-01T21:04:33.424687Z",
+     "start_time": "2021-04-01T21:04:33.409155Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def plot_xG_team_df(df_team: pd.DataFrame, team_name: str, year: int) -> Figure:\n",
+    "    team_max_xG = df_team[\"team_xGoals\"].max() + 0.5\n",
+    "\n",
+    "    fig = figure(\n",
+    "        title=f\"xG pour {team_name}, saison {year}-{year + 1}\",\n",
+    "        plot_width=900,\n",
+    "        plot_height=600,\n",
+    "        x_axis_label=\"x\",\n",
+    "        y_axis_label=\"y\",\n",
+    "        y_range=(0, team_max_xG)\n",
+    "    )\n",
+    "\n",
+    "    match_outcomes = ['Victoire', 'Match Nul', \"Défaite\"]\n",
+    "    color_mapper = CategoricalColorMapper(factors=match_outcomes,\n",
+    "                                          palette=RdYlGn[len(match_outcomes)])\n",
+    "\n",
+    "    r = fig.circle(x=\"journée\", y=\"team_xGoals\", source=df_team, size=10,\n",
+    "               color={'field': \"match_result\", 'transform': color_mapper})\n",
+    "\n",
+    "    fig.line(x=\"journée\", y=\"rolling_team_xG\", source=df_team, color=\"green\",\n",
+    "             legend_label=\"Moyenne glissante de xG produits (6 matchs)\", line_width=1.5)\n",
+    "    \n",
+    "    fig.line(x=\"journée\", y=\"rolling_opponent_xG\", source=df_team, color=\"red\",\n",
+    "         legend_label=\"Moyenne glissante de xG concédés (6 matchs)\", line_width=1.5)\n",
+    "\n",
+    "    glyph = r.glyph\n",
+    "    glyph.size = 15\n",
+    "    glyph.fill_alpha = 1\n",
+    "    glyph.line_color = \"black\"\n",
+    "    glyph.line_width = 1\n",
+    "\n",
+    "    hover = HoverTool()\n",
+    "    hover.tooltips = [\n",
+    "        ('Date', '@date'),\n",
+    "        ('xG', '@team_xGoals{0.2f}'),\n",
+    "        ('xG contre', '@opponents_xGoals{0.2f}'),\n",
+    "        ('Opponent', '@opponent'),\n",
+    "        ('Lieu', '@team_side'),\n",
+    "        ('Résultat', '@match_result'),\n",
+    "    ]\n",
+    "    fig.add_tools(hover)\n",
+    "\n",
+    "    fig.toolbar.logo = None\n",
+    "    fig.toolbar_location = None\n",
+    "\n",
+    "    fig.yaxis.major_label_text_font_size = \"18pt\"\n",
+    "    fig.yaxis.major_label_text_font_size = \"16pt\"\n",
+    "    fig.xaxis.axis_label = f'Journée'\n",
+    "    fig.yaxis.axis_label = f'xGoals par match'\n",
+    "    fig.xaxis.axis_label_text_font_size = \"18pt\"\n",
+    "    fig.yaxis.axis_label_text_font_size = \"18pt\"\n",
+    "\n",
+    "    fig.background_fill_color = \"gray\"\n",
+    "    fig.background_fill_alpha = 0.05\n",
+    "\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-01T21:06:52.634666Z",
+     "start_time": "2021-04-01T21:06:52.433224Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fig = plot_xG_team_df(df_team, team_name=\"Lyon\", year=2020)\n",
+    "show(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-01T12:56:07.372939Z",
+     "start_time": "2021-04-01T12:56:07.191597Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "team_max_xG = df_team[\"team_xGoals\"].max() + 0.5\n",
+    "\n",
+    "fig = figure(\n",
+    "    title=f\"xG pour {team_name}, saison {year}-{year + 1}\"\n",
+    "    plot_width=900,\n",
+    "    plot_height=600,\n",
+    "    x_axis_label=\"x\",\n",
+    "    y_axis_label=\"y\",\n",
+    "    y_range=(0, team_max_xG)\n",
+    ")\n",
+    "\n",
+    "match_outcomes = ['Victoire', 'Match Nul', \"Défaite\"]\n",
+    "color_mapper = CategoricalColorMapper(factors=match_outcomes,\n",
+    "                                      palette=RdYlGn[3])\n",
+    "\n",
+    "r = fig.circle(x=\"journée\", y=\"team_xGoals\", source=df_team, size=10,\n",
+    "               color={'field': \"match_result\", 'transform': color_mapper})\n",
+    "\n",
+    "fig.line(x=\"journée\", y=\"rolling_team_xG\", source=df_team, color=\"gray\",\n",
+    "         legend_label=\"Moyenne glissante de xG (6 matchs)\", line_width=2)\n",
+    "\n",
+    "glyph = r.glyph\n",
+    "glyph.size = 15\n",
+    "glyph.fill_alpha = 1\n",
+    "glyph.line_color = \"black\"\n",
+    "glyph.line_width = 1\n",
+    "\n",
+    "hover = HoverTool()\n",
+    "hover.tooltips = [\n",
+    "    ('Date', '@date'),\n",
+    "    ('xG', '@team_xGoals{0.2f}'),\n",
+    "    ('xG contre', '@opponents_xGoals{0.2f}'),\n",
+    "    ('Opponent', '@opponent'),\n",
+    "    ('Lieu', '@team_side'),\n",
+    "    ('Résultat', '@match_result'),\n",
+    "]\n",
+    "fig.add_tools(hover)\n",
+    "\n",
+    "fig.toolbar.logo = None\n",
+    "fig.toolbar_location = None\n",
+    "\n",
+    "fig.yaxis.major_label_text_font_size = \"18pt\"\n",
+    "fig.yaxis.major_label_text_font_size = \"16pt\"\n",
+    "fig.xaxis.axis_label = f'Journée'\n",
+    "fig.yaxis.axis_label = f'xGoals par match'\n",
+    "fig.xaxis.axis_label_text_font_size = \"18pt\"\n",
+    "fig.yaxis.axis_label_text_font_size = \"18pt\"\n",
+    "\n",
+    "fig.background_fill_color = \"gray\"\n",
+    "fig.background_fill_alpha = 0.05\n",
+    "\n",
+    "show(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
